[package]
name = "lmrs"
version = "0.1.0"
edition = "2021"

[features]
default = []
backend = ["dep:tokio-tungstenite", "dep:futures-util", "dep:tokio"]
backend-multimodal = ["dep:base64", "dep:image", "dep:serde_json", "dep:serde"]
multimodal = ["dep:image"]

[dependencies]
wide = "0.7.28"
memmap2 = "0.9.4"
rayon = "1.10.0"
chrono = "0.4.38"
clap = { version = "4.5.13", features = ["derive"] }

image = { version = "0.25.2", optional = true }
tokio-tungstenite = { version = "0.23.1", optional = true }
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"], optional = true }
tokio = { version = "1.0.0", features = ["full"], optional = true }
base64 = { version = "0.22.1", optional = true }
serde_json = { version = "1.0.128", optional = true }
serde = { version = "1.0.210", features = ["derive"], optional = true }

[[bin]]
name = "backend"
required-features = ["backend"]

[profile.release]
codegen-units = 1
lto = true